--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -248,7 +248,7 @@
     </p>
     <ul>
       <li>
-        Parser.Template: Do not trim whitespace from end of template arg (affects many fr.w pages with many single-letter paragraphs (citation bloc)). See: <a href="/site/fr.wikipedia.org/wiki/Histoire_de_la_marine_fran%C3%A7aise_sous_Louis_XV_et_Louis_XVI">https://fr.wikipedia.org/wiki/Histoire_de_la_marine_française_sous_Louis_XV_et_Louis_XVI</a> [broken since:v2.11.2]
+        Parser.Template: Do not trim whitespace from end of template arg (affects many fr.w pages with many single-letter paragraphs (citation bloc)). See: <a href="https://fr.wikipedia.org/wiki/Histoire_de_la_marine_française_sous_Louis_XV_et_Louis_XVI" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Histoire_de_la_marine_française_sous_Louis_XV_et_Louis_XVI</a> [broken since:v2.11.2]
       </li>
       <li>
         Category: Fix category pages not loading. See: <a href="/site/simple.wikipedia.org/wiki/Category:Computer_science">https://simple.wikipedia.org/wiki/Category:Computer_science</a>
@@ -621,7 +621,7 @@
     </p>
     <ul>
       <li>
-        Site.cfg: Enable extensions on a per-wiki basis (affects some pages showing wrong content); EX:&lt;do&gt; should not be enabled on en.w {detected by bmihal}. See: <a href="/site/en.wikipedia.org/wiki/Type_system">https://en.wikipedia.org/wiki/Type_system</a> <a href="/site/fr.wikipedia.org/wiki/Wikip%C3%A9dia:Le">https://fr.wikipedia.org/wiki/Wikipédia:Le</a> Bistro/13_novembre_2008
+        Site.cfg: Enable extensions on a per-wiki basis (affects some pages showing wrong content); EX:&lt;do&gt; should not be enabled on en.w {detected by bmihal}. See: <a href="/site/en.wikipedia.org/wiki/Type_system">https://en.wikipedia.org/wiki/Type_system</a> <a href="https://fr.wikipedia.org/wiki/Wikipédia:Le" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Wikipédia:Le</a> Bistro/13_novembre_2008
       </li>
       <li>
         Site.cfg: Enable interwiki aliases on a per-wiki basis [[Dev/Design/Site_config]].
@@ -2513,7 +2513,7 @@
     </p>
     <ul>
       <li>
-        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline" id="xolnki_50" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline" id="xolnki_50" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
       <li>
         Gui: Add "please wait" message when building SQLite indexes.
