--- a/home/wiki/Change_log/v3.4.4.1.html
+++ b/home/wiki/Change_log/v3.4.4.1.html
@@ -96,7 +96,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Allow empty string for Raw argument in PAGESFORCATEGORY. Example: 0.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Projet:Venezuela">https://fr.wikipedia.org/wiki/Projet:Venezuela</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Projet:Venezuela" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Projet:Venezuela</a>
       </dd>
     </dl>
     <ul>
