--- a/home/wiki/Change_log/v3.8.1.1.html
+++ b/home/wiki/Change_log/v3.8.1.1.html
@@ -99,7 +99,7 @@
         <span style='font-variant:small-caps'>Example</span>: Erreur de script: @C:/xowa/bin/any/xowa/xtns/Scribunto/engines/Luaj/MWServer.lua:59 vm error: java.lang.ClassCastException: [Lgplx.Keyval; cannot be cast to java.lang.String.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Acte_de_M%C3%A9diation">https://fr.wikipedia.org/wiki/Acte_de_Médiation</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Acte_de_Médiation" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Acte_de_Médiation</a>
       </dd>
     </dl>
     <ul>
