--- a/home/wiki/Change_log/v4.5.7.1706.html
+++ b/home/wiki/Change_log/v4.5.7.1706.html
@@ -98,7 +98,7 @@
         <span style='font-variant:small-caps'>Example</span>: {{#tag:div|text|id='&lt;br/&gt;'}}.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikivoyage.org/wiki/France">https://fr.wikivoyage.org/wiki/France</a> <a href="/site/fr.wikivoyage.org/wiki/Paris">https://fr.wikivoyage.org/wiki/Paris</a> <a href="/site/fr.wikivoyage.org/wiki/Germany">https://fr.wikivoyage.org/wiki/Germany</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikivoyage.org/wiki/France" rel="nofollow" class="external free">https://fr.wikivoyage.org/wiki/France</a> <a href="https://fr.wikivoyage.org/wiki/Paris" rel="nofollow" class="external free">https://fr.wikivoyage.org/wiki/Paris</a> <a href="https://fr.wikivoyage.org/wiki/Germany" rel="nofollow" class="external free">https://fr.wikivoyage.org/wiki/Germany</a>
       </dd>
     </dl>
     <ul>
@@ -186,7 +186,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Format doubles using sprintf-like behavior.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikipedia.org/wiki/Hasbro">https://fr.wikipedia.org/wiki/Hasbro</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Hasbro" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Hasbro</a>
       </dd>
     </dl>
     <ul>
