--- a/home/wiki/Change_log/v4.6.0.1903.html
+++ b/home/wiki/Change_log/v4.6.0.1903.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Change log - XOWA</title>
+  <title>Change log/v4.6.0.1903 - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,104 +11,12 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Change log</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Change log/v4.6.0.1903</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
-    <div id="toc" class="toc">
-      <div id="toctitle" class="toctitle">
-        <h2>
-          Contents
-        </h2>
-      </div>
-      <ul>
-        <li class="toclevel-1 tocsection-1">
-          <a href="#Categories"><span class="tocnumber">1</span> <span class="toctext">Categories</span></a> 
-          <ul>
-            <li class="toclevel-2 tocsection-2">
-              <a href="#High-level_categories"><span class="tocnumber">1.1</span> <span class="toctext">High-level categories</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-3">
-              <a href="#Sub-categories"><span class="tocnumber">1.2</span> <span class="toctext">Sub-categories</span></a>
-            </li>
-          </ul>
-        </li>
-        <li class="toclevel-1 tocsection-4">
-          <a href="#v4.6.0.1903_.282019-03-23.29"><span class="tocnumber">2</span> <span class="toctext">v4.6.0.1903 (2019-03-23)</span></a> 
-          <ul>
-            <li class="toclevel-2 tocsection-5">
-              <a href="#Wiki"><span class="tocnumber">2.1</span> <span class="toctext">Wiki</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-6">
-              <a href="#PC"><span class="tocnumber">2.2</span> <span class="toctext">PC</span></a>
-            </li>
-          </ul>
-        </li>
-        <li class="toclevel-1 tocsection-7">
-          <a href="#Archives"><span class="tocnumber">3</span> <span class="toctext">Archives</span></a>
-        </li>
-      </ul>
-    </div>
-    <h2>
-      <span class="mw-headline" id="Categories">Categories</span>
-    </h2>
-    <h3>
-      <span class="mw-headline" id="High-level_categories">High-level categories</span>
-    </h3>
-    <p>
-      Change log items are divided into the following high-level categories:
-    </p>
-    <ul>
-      <li>
-        <b>Wiki</b>: New Wikis to be downloaded from archive.org
-      </li>
-      <li>
-        <b>PC</b>: Changes related to the XOWA application on Windows, Linux, and Mac OS X personal computers.
-      </li>
-      <li>
-        <b>Android</b>: Changes related to the XOWA Android app on Android OS phones, tablets, and related devices
-      </li>
-      <li>
-        <b>Server</b>: Changes related to the XOWA HTTP Server on Windows, Linux, Mac OS X, and Raspberry PI machines
-      </li>
-      <li>
-        <b>Doc</b>: Documentation changes in home wiki and <a href="http://xowa.org" rel="nofollow" class="external free">http://xowa.org</a>
-      </li>
-      <li>
-        <b>Dev</b>: Code-related changes.
-      </li>
-    </ul>
-    <p>
-      Note that <b>PC</b> changes will probably also affect <b>Andriod</b> and <b>Server</b>. All three apps share the same code-base.
-    </p>
-    <h3>
-      <span class="mw-headline" id="Sub-categories">Sub-categories</span>
-    </h3>
-    <p>
-      For <b>PC</b>, <b>Android</b>, and <b>Server</b>, change log items are further divided into the following sub-categories:
-    </p>
-    <ul>
-      <li>
-        <b>major</b>: Major change, fix or addition. Likely noticeable.
-      </li>
-      <li>
-        <b>significant</b>: Significant change, fix or addition. Probably noticeable.
-      </li>
-      <li>
-        <b>minor</b>: Minor change, fix or addition. Possibly noticeable.
-      </li>
-      <li>
-        <b>trivial</b>: Trivial change, fix or addition. Probably unnoticeable.
-      </li>
-      <li>
-        <b>dev</b>: Developer change, fix or addition. Unnoticeable unless dev.
-      </li>
-    </ul>
-    <p>
-      The most important category to review is <b>major</b>. The other categories may be skipped due to lower importance (if they were more important, they would be bumped up to <b>major</b>).
-    </p>
     <h2>
       <span class="mw-headline" id="v4.6.0.1903_.282019-03-23.29">v4.6.0.1903 (2019-03-23)</span>
     </h2>
@@ -1030,29 +938,6 @@
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/348" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/348</a>
       </dd>
     </dl>
-    <h2>
-      <span class="mw-headline" id="Archives">Archives</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="http://xowa.org/home/wiki/Change_log/2018" id="xolnki_3" title="Change log/2018" class="xowa-visited">2018 Change Log</a>
-      </li>
-      <li>
-        <a href="http://xowa.org/home/wiki/Change_log/2017" id="xolnki_4" title="Change log/2017" class="xowa-visited">2017 Change Log</a>
-      </li>
-      <li>
-        <a href="http://xowa.org/home/wiki/Change_log/2016" id="xolnki_5" title="Change log/2016">2016 Change Log</a>
-      </li>
-      <li>
-        <a href="http://xowa.org/home/wiki/Change_log/2015" id="xolnki_6" title="Change log/2015">2015 Change Log</a>
-      </li>
-      <li>
-        <a href="http://xowa.org/home/wiki/Change_log/2014" id="xolnki_7" title="Change log/2014">2014 Change Log</a>
-      </li>
-      <li>
-        <a href="http://xowa.org/home/wiki/Change_log/2013" id="xolnki_8" title="Change log/2013">2013 Change Log</a>
-      </li>
-    </ul>
   
     </div>
   </div>
