--- a/home/wiki/Dashboard/Import/Online.html
+++ b/home/wiki/Dashboard/Import/Online.html
@@ -869,7 +869,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('fr.wikipedia.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/fr.wikipedia.org/wiki/">http://fr.wikipedia.org</a>
+          <a href="http://fr.wikipedia.org" rel="nofollow" class="external free">http://fr.wikipedia.org</a>
         </td>
         <td>
           French
@@ -1051,7 +1051,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('fr.wikivoyage.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/fr.wikivoyage.org/wiki/">http://fr.wikivoyage.org</a>
+          <a href="http://fr.wikivoyage.org" rel="nofollow" class="external free">http://fr.wikivoyage.org</a>
         </td>
         <td>
           French
