--- a/home/wiki/Diagnostics/HTML_Tidy.html
+++ b/home/wiki/Diagnostics/HTML_Tidy.html
@@ -42,7 +42,7 @@
       should not be small
     </p>
     <h2>
-      <span class="mw-headline" id="para_inside_span_causes_horizontal_scroll_.28http:.2F.2Ffr.wikipedia.org.2Fwiki.2FFranz_Liszt.23Liens_externes">para inside span causes horizontal scroll (<a href="/site/fr.wikipedia.org/wiki/Franz_Liszt">http://fr.wikipedia.org/wiki/Franz_Liszt#Liens_externes</a></span>
+      <span class="mw-headline" id="para_inside_span_causes_horizontal_scroll_.28http:.2F.2Ffr.wikipedia.org.2Fwiki.2FFranz_Liszt.23Liens_externes">para inside span causes horizontal scroll (<a href="http://fr.wikipedia.org/wiki/Franz_Liszt#Liens_externes" rel="nofollow" class="external free">http://fr.wikipedia.org/wiki/Franz_Liszt#Liens_externes</a></span>
     </h2>
     <p>
       <code>fails if horizontal scroll bar</code><br>
@@ -263,7 +263,7 @@
       <br>
     </p>
     <h2>
-      <span class="mw-headline" id="div_not_inside_td_should_be_reparented_correctly_.28http:.2F.2Ffr.wikivoyage.org.2Fwiki.2FMarrakech_--_Infobox.29">div not inside td should be reparented correctly (<a href="/site/fr.wikivoyage.org/wiki/Marrakech">http://fr.wikivoyage.org/wiki/Marrakech</a> -- Infobox)</span>
+      <span class="mw-headline" id="div_not_inside_td_should_be_reparented_correctly_.28http:.2F.2Ffr.wikivoyage.org.2Fwiki.2FMarrakech_--_Infobox.29">div not inside td should be reparented correctly (<a href="http://fr.wikivoyage.org/wiki/Marrakech" rel="nofollow" class="external free">http://fr.wikivoyage.org/wiki/Marrakech</a> -- Infobox)</span>
     </h2>
     <p>
       <code>fails if "should appear above table" is inside table</code><br>
