--- a/home/wiki/Diagnostics/Scribunto/MessageLibrary.html
+++ b/home/wiki/Diagnostics/Scribunto/MessageLibrary.html
@@ -164,13 +164,7 @@
       </tr>
       <tr>
         <td>
-          <span style='color: red;'>fail:<br>
-          'Sun</span>
-<pre>
-<span style='color: red;'>'<br>
-'Dim.
- '</span>
-</pre>
+          <span style='color: green;'>pass</span>
         </td>
         <td>
           inLanguage
@@ -179,7 +173,7 @@
           {{#invoke:Diagnostics/MessageLibrary|plain_inLanguage|fr|sun}}
         </td>
         <td>
-          Sun 
+          Dim. 
           <p>
             <br>
           </p>
