--- a/home/wiki/Help/About.html
+++ b/home/wiki/Help/About.html
@@ -46,7 +46,7 @@
           version:
         </td>
         <td>
-          4.5.26.1810 <b>(<a href="http://xowa.org/home/wiki/Change_log" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
+          4.6.0.1903 <b>(<a href="http://xowa.org/home/wiki/Change_log" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
         </td>
       </tr>
       <tr>
@@ -54,7 +54,7 @@
           build date:
         </td>
         <td>
-          2019-03-10 05:37:17
+          2019-03-23 20:16:47
         </td>
       </tr>
       <tr>
@@ -163,13 +163,16 @@
                     HTTP server improvements
                   </li>
                   <li>
-                    HTML emulation patches
+                    Parser patches
                   </li>
                   <li>
-                    20+ pull requests
+                    HTML patches
                   </li>
                   <li>
-                    multiple defect detection
+                    30+ pull requests
+                  </li>
+                  <li>
+                    125+ defect detection
                   </li>
                 </ul>
               </td>
