--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -28,39 +28,42 @@
           <a href="#Disclaimer"><span class="tocnumber">1</span> <span class="toctext">Disclaimer</span></a>
         </li>
         <li class="toclevel-1 tocsection-2">
-          <a href="#Release_notes"><span class="tocnumber">2</span> <span class="toctext">Release notes</span></a>
+          <a href="#v4.6_series_and_acknowledgement_to_desb42"><span class="tocnumber">2</span> <span class="toctext">v4.6 series and acknowledgement to desb42</span></a>
         </li>
         <li class="toclevel-1 tocsection-3">
-          <a href="#New_users"><span class="tocnumber">3</span> <span class="toctext">New users</span></a> 
+          <a href="#Release_notes"><span class="tocnumber">3</span> <span class="toctext">Release notes</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-4">
+          <a href="#New_users"><span class="tocnumber">4</span> <span class="toctext">New users</span></a> 
           <ul>
-            <li class="toclevel-2 tocsection-4">
-              <a href="#Build_a_wiki_while_online"><span class="tocnumber">3.1</span> <span class="toctext">Build a wiki while online</span></a>
-            </li>
             <li class="toclevel-2 tocsection-5">
-              <a href="#Build_a_wiki_while_offline"><span class="tocnumber">3.2</span> <span class="toctext">Build a wiki while offline</span></a>
+              <a href="#Build_a_wiki_while_online"><span class="tocnumber">4.1</span> <span class="toctext">Build a wiki while online</span></a>
             </li>
             <li class="toclevel-2 tocsection-6">
-              <a href="#Download_pre-built_wikis_within_XOWA"><span class="tocnumber">3.3</span> <span class="toctext">Download pre-built wikis within XOWA</span></a>
+              <a href="#Build_a_wiki_while_offline"><span class="tocnumber">4.2</span> <span class="toctext">Build a wiki while offline</span></a>
             </li>
             <li class="toclevel-2 tocsection-7">
-              <a href="#Download_pre-built_wikis_within_a_browser"><span class="tocnumber">3.4</span> <span class="toctext">Download pre-built wikis within a browser</span></a>
+              <a href="#Download_pre-built_wikis_within_XOWA"><span class="tocnumber">4.3</span> <span class="toctext">Download pre-built wikis within XOWA</span></a>
             </li>
             <li class="toclevel-2 tocsection-8">
-              <a href="#Creating_a_personal_wiki"><span class="tocnumber">3.5</span> <span class="toctext">Creating a personal wiki</span></a>
+              <a href="#Download_pre-built_wikis_within_a_browser"><span class="tocnumber">4.4</span> <span class="toctext">Download pre-built wikis within a browser</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-9">
+              <a href="#Creating_a_personal_wiki"><span class="tocnumber">4.5</span> <span class="toctext">Creating a personal wiki</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-9">
-          <a href="#Upgrade_users"><span class="tocnumber">4</span> <span class="toctext">Upgrade users</span></a>
-        </li>
         <li class="toclevel-1 tocsection-10">
-          <a href="#Tips"><span class="tocnumber">5</span> <span class="toctext">Tips</span></a>
+          <a href="#Upgrade_users"><span class="tocnumber">5</span> <span class="toctext">Upgrade users</span></a>
         </li>
         <li class="toclevel-1 tocsection-11">
-          <a href="#Notes"><span class="tocnumber">6</span> <span class="toctext">Notes</span></a>
+          <a href="#Tips"><span class="tocnumber">6</span> <span class="toctext">Tips</span></a>
         </li>
         <li class="toclevel-1 tocsection-12">
-          <a href="#Links"><span class="tocnumber">7</span> <span class="toctext">Links</span></a>
+          <a href="#Notes"><span class="tocnumber">7</span> <span class="toctext">Notes</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-13">
+          <a href="#Links"><span class="tocnumber">8</span> <span class="toctext">Links</span></a>
         </li>
       </ul>
     </div>
@@ -71,17 +74,69 @@
       Please note that this program is beta software. Although it is my best hope that you find this program functional and useful, I make no assurances regarding stability or fitness of purpose. For more details, see <a href="http://xowa.org/home/wiki/Help/License/Code" id="xolnki_2" title="Help/License/Code" class="xowa-visited">Help/License/Code</a>.
     </p>
     <h2>
-      <span class="mw-headline" id="Release_notes">Release notes</span>
+      <span class="mw-headline" id="v4.6_series_and_acknowledgement_to_desb42">v4.6 series and acknowledgement to desb42</span>
     </h2>
     <p>
-      v4.5.21.1808 features the following:
+      XOWA has been fortunate to have several dedicated contributors over the years, such as Schnark, hidp123, Anselm, Ope30, Mattze96, and anonymous4. XOWA would not be the same were if not for their efforts.
+    </p>
+    <p>
+      The same can be said of version 4.6.0.1903. <a href="https://github.com/desb42" rel="nofollow" class="external text">desb42</a> has raised the standard of contribution to another level. Over the course of 5 months, desb42 has done the following:
     </p>
     <ul>
       <li>
-        (Wiki) Publish 2018-07 English Wikipedia
+        Created 125+ issues
       </li>
       <li>
-        (PC) Fix multiple script errors due to Wikibase and Scribunto.
+        Commented 150+ times with extreme depth and precision of detail
+      </li>
+      <li>
+        Proposed fixes across 30+ branches
+      </li>
+    </ul>
+    <p>
+      v4.6.0.1903 in particular has 53 fixes related to these issues, including:
+    </p>
+    <ul>
+      <li>
+        Multiple improvements to HTTP server including popup fixes
+      </li>
+      <li>
+        Improvements to the Timeline extension
+      </li>
+      <li>
+        Many parser fixes
+      </li>
+      <li>
+        Many build fixes which resulted in the 2019-03 German Wikipedia
+      </li>
+    </ul>
+    <p>
+      As it's likely that most of the 4.6 series will be related to desb42's 70+ tickets in backlog, it's only fitting to acknowledge these extraordinary efforts and dedicate the 4.6 series to desb42.
+    </p>
+    <p>
+      Thanks desb42!
+    </p>
+    <h2>
+      <span class="mw-headline" id="Release_notes">Release notes</span>
+    </h2>
+    <p>
+      v4.6.0.1903 features the following:
+    </p>
+    <ul>
+      <li>
+        (Wiki) Publish 2019-03 German Wikipedia
+      </li>
+      <li>
+        (PC) Fix major parser issues like "TemplateStyles" and "JumpTo"
+      </li>
+      <li>
+        (PC) Fix multiple minor parser issues due to Wikibase and Scribunto.
+      </li>
+      <li>
+        (PC) Improve HTTP Server
+      </li>
+      <li>
+        (PC) Change HTML databases to use plain-text (HTxt) instead of compressed HTML (HZip)
       </li>
     </ul>
     <p>
@@ -175,7 +230,7 @@
     </h5>
     <ul>
       <li>
-        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline" id="xolnki_12" title="Dashboard/Import/Offline">import offline</a>.
+        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline" id="xolnki_12" title="Dashboard/Import/Offline" class="xowa-visited">import offline</a>.
       </li>
     </ul>
     <h5>
@@ -379,7 +434,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline" id="xolnki_40" title="Dashboard/Import/Offline">Import Offline</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline" id="xolnki_40" title="Dashboard/Import/Offline" class="xowa-visited">Import Offline</a>
         </td>
         <td>
           Import a wiki through a dump; import also through script; also upgrade category to version 2
