--- a/home/wiki/Options/Language.html
+++ b/home/wiki/Options/Language.html
@@ -133,6 +133,7 @@
 <option value="zh-hant">‪中文(繁體)‬ [zh-hant]</option>
 <option value="aa">Qafár af [aa]</option>
 <option value="ab">Аҧсуа [ab]</option>
+<option value="abs">Ambonese Malay [abs]</option>
 <option value="ace">Acèh [ace]</option>
 <option value="ady">Adyghe [ady]</option>
 <option value="ady-cyrl">West Circassian (Cyrillic) [ady-cyrl]</option>
@@ -140,11 +141,13 @@
 <option value="aeb-arab">زَوُن [aeb-arab]</option>
 <option value="aeb-latn">زَوُن [aeb-latn]</option>
 <option value="af">Afrikaans [af]</option>
+<option value="ais">Asturian [ais]</option>
 <option value="ak">Akan [ak]</option>
 <option value="akz">Alibamu [akz]</option>
 <option value="aln">Gegë [aln]</option>
 <option value="als">Alemannisch [als]</option>
 <option value="am">አማርኛ [am]</option>
+<option value="ami">Amis [ami]</option>
 <option value="an">Aragonés [an]</option>
 <option value="ang">Ænglisc [ang]</option>
 <option value="anp">अङ्गिका [anp]</option>
@@ -191,10 +194,12 @@
 <option value="br">Brezhoneg [br]</option>
 <option value="brh">Bráhuí [brh]</option>
 <option value="bs">Bosanski [bs]</option>
+<option value="btm">Mandailing [btm]</option>
 <option value="bto">Rinconada Bikol [bto]</option>
 <option value="bug">ᨅᨔ ᨕᨘᨁᨗ [bug]</option>
 <option value="bxr">Буряад [bxr]</option>
 <option value="ca">Català [ca]</option>
+<option value="cak">Kaqchikel [cak]</option>
 <option value="cbk-zam">Chavacano de Zamboanga [cbk-zam]</option>
 <option value="cdo">Mìng-dĕ̤ng-ngṳ̄ [cdo]</option>
 <option value="ce">Нохчийн [ce]</option>
@@ -206,6 +211,7 @@
 <option value="chy">Tsetsêhestâhese [chy]</option>
 <option value="ckb">کوردی [ckb]</option>
 <option value="co">Corsu [co]</option>
+<option value="cop">Coptic [cop]</option>
 <option value="cps">Capiceño [cps]</option>
 <option value="cr">Nēhiyawēwin / ᓀᐦᐃᔭᐍᐏᐣ [cr]</option>
 <option value="crh">Qırımtatarca [crh]</option>
@@ -220,6 +226,7 @@
 <option value="de-at">Österreichisches Deutsch [de-at]</option>
 <option value="de-ch">Schweizer Hochdeutsch [de-ch]</option>
 <option value="de-formal">‪Deutsch (Sie-Form)‬ [de-formal]</option>
+<option value="din">Dinka [din]</option>
 <option value="diq">Zazaki [diq]</option>
 <option value="dsb">Dolnoserbski [dsb]</option>
 <option value="dtp">Dusun Bundu-liwan [dtp]</option>
@@ -248,6 +255,7 @@
 <option value="fiu-vro">Võro [fiu-vro]</option>
 <option value="fj">Na Vosa Vakaviti [fj]</option>
 <option value="fo">Føroyskt [fo]</option>
+<option value="fon">Fon [fon]</option>
 <option value="fr">Français [fr]</option>
 <option value="frc">Français cadien [frc]</option>
 <option value="frp">Arpetan [frp]</option>
@@ -255,10 +263,13 @@
 <option value="fur">Furlan [fur]</option>
 <option value="fy">Frysk [fy]</option>
 <option value="ga">Gaeilge [ga]</option>
+<option value="gaa">Gaa [gaa]</option>
 <option value="gag">Gagauz [gag]</option>
 <option value="gan">贛語 [gan]</option>
 <option value="gan-hans">‪赣语(简体)‬ [gan-hans]</option>
 <option value="gan-hant">‪贛語(繁體)‬ [gan-hant]</option>
+<option value="gcf">Guadeloupean Creole French [gcf]</option>
+<option value="gcr">Guianan Creole [gcr]</option>
 <option value="gd">Gàidhlig [gd]</option>
 <option value="gl">Galego [gl]</option>
 <option value="glk">گیلکی [glk]</option>
@@ -281,7 +292,9 @@
 <option value="hif">Fiji Hindi [hif]</option>
 <option value="hif-latn">Fiji Hindi [hif-latn]</option>
 <option value="hil">Ilonggo [hil]</option>
+<option value="hne">Chhattisgarhi  [hne]</option>
 <option value="ho">Hiri Motu [ho]</option>
+<option value="hoc">Ho [hoc]</option>
 <option value="hr">Hrvatski [hr]</option>
 <option value="hrx">Hunsriker [hrx]</option>
 <option value="hsb">Hornjoserbsce [hsb]</option>
@@ -290,6 +303,7 @@
 <option value="hu">Magyar [hu]</option>
 <option value="hu-formal">Magyar (formal) [hu-formal]</option>
 <option value="hy">Հայերեն [hy]</option>
+<option value="hyw">Western Armenian [hyw]</option>
 <option value="hz">Otsiherero [hz]</option>
 <option value="ia">Interlingua [ia]</option>
 <option value="id">Bahasa Indonesia [id]</option>
@@ -317,11 +331,14 @@
 <option value="kbd">Къэбэрдеибзэ / Qabardjajəbza [kbd]</option>
 <option value="kbd-cyrl">къэбэрдеибзэ [kbd-cyrl]</option>
 <option value="kbp">Kabiye [kbp]</option>
+<option value="kea">Cape Verdean Creole [kea]</option>
 <option value="kg">Kongo [kg]</option>
 <option value="khw">کھوار [khw]</option>
 <option value="ki">Gĩkũyũ [ki]</option>
+<option value="kip">Sheshi Kham  [kip]</option>
 <option value="kiu">Kırmancki [kiu]</option>
 <option value="kj">Kwanyama [kj]</option>
+<option value="kjp">Eastern Pwo [kjp]</option>
 <option value="kk">Қазақша [kk]</option>
 <option value="kk-arab">‫قازاقشا (تٴوتە)‬ [kk-arab]</option>
 <option value="kk-cn">‫قازاقشا (جۇنگو)‬ [kk-cn]</option>
@@ -345,14 +362,17 @@
 <option value="ks-arab">کٲشُر [ks-arab]</option>
 <option value="ks-deva">कॉशुर [ks-deva]</option>
 <option value="ksh">Ripoarisch [ksh]</option>
+<option value="ksw">Kofa [ksw]</option>
 <option value="ku">Kurdî [ku]</option>
 <option value="ku-arab">‫كوردي (عەرەبی)‬ [ku-arab]</option>
 <option value="ku-latn">‪Kurdî (latînî)‬ [ku-latn]</option>
+<option value="kum">Kumyk [kum]</option>
 <option value="kv">Коми [kv]</option>
 <option value="kw">Kernowek [kw]</option>
 <option value="ky">Кыргызча [ky]</option>
 <option value="la">Latina [la]</option>
 <option value="lad">Ladino [lad]</option>
+<option value="lag">Rangi [lag]</option>
 <option value="lb">Lëtzebuergesch [lb]</option>
 <option value="lbe">Лакку [lbe]</option>
 <option value="lez">Лезги [lez]</option>
@@ -362,6 +382,8 @@
 <option value="lij">Líguru [lij]</option>
 <option value="liv">Līvõ kēļ [liv]</option>
 <option value="lki">Laki [lki]</option>
+<option value="lkt">Lakota [lkt]</option>
+<option value="lld">Ladin [lld]</option>
 <option value="lmo">Lumbaart [lmo]</option>
 <option value="ln">Lingála [ln]</option>
 <option value="lo">ລາວ [lo]</option>
@@ -387,6 +409,8 @@
 <option value="ml">മലയാളം [ml]</option>
 <option value="mn">Монгол [mn]</option>
 <option value="mnc">Manchu [mnc]</option>
+<option value="mni">Manipuri/Meitei [mni]</option>
+<option value="mnw">Mon [mnw]</option>
 <option value="mo">Молдовеняскэ [mo]</option>
 <option value="mr">मराठी [mr]</option>
 <option value="mrj">Кырык мары [mrj]</option>
@@ -415,15 +439,18 @@
 <option value="nn">‪Norsk (nynorsk)‬ [nn]</option>
 <option value="no">‪Norsk (bokmål)‬ [no]</option>
 <option value="nov">Novial [nov]</option>
+<option value="nqo">N'Ko [nqo]</option>
 <option value="nrm">Nouormand [nrm]</option>
 <option value="nso">Sesotho sa Leboa [nso]</option>
 <option value="nv">Diné bizaad [nv]</option>
 <option value="ny">Chi-Chewa [ny]</option>
+<option value="nys">Nyungar [nys]</option>
 <option value="oc">Occitan [oc]</option>
 <option value="olo">Olo [olo]</option>
 <option value="om">Oromoo [om]</option>
 <option value="or">ଓଡ଼ିଆ [or]</option>
 <option value="os">Иронау [os]</option>
+<option value="ovd">Elfdalian [ovd]</option>
 <option value="pa">ਪੰਜਾਬੀ [pa]</option>
 <option value="pag">Pangasinan [pag]</option>
 <option value="pam">Kapampangan [pam]</option>
@@ -440,12 +467,14 @@
 <option value="pnt">Ποντιακά [pnt]</option>
 <option value="ppl">Pipil [ppl]</option>
 <option value="prg">Prūsiskan [prg]</option>
+<option value="prs">Dari [prs]</option>
 <option value="ps">پښتو [ps]</option>
 <option value="pt">Português [pt]</option>
 <option value="pt-br">Português do Brasil [pt-br]</option>
 <option value="qqq">MediaWiki sample [qqq]</option>
 <option value="qu">Runa Simi [qu]</option>
 <option value="qug">Runa shimi [qug]</option>
+<option value="qwh">Huaylas Quechua [qwh]</option>
 <option value="rap">Rapa Nui [rap]</option>
 <option value="rgn">Rumagnôl [rgn]</option>
 <option value="rif">Tarifit [rif]</option>
@@ -482,9 +511,12 @@
 <option value="sh">Srpskohrvatski / Српскохрватски [sh]</option>
 <option value="shi">Tašlḥiyt [shi]</option>
 <option value="shn">Shan [shn]</option>
+<option value="shy-latn">Shawiya - Latin [shy-latn]</option>
 <option value="si">Sinhalese [si]</option>
 <option value="simple">Simple English [simple]</option>
 <option value="sk">Slovenčina [sk]</option>
+<option value="skr">Saraiki [skr]</option>
+<option value="skr-arab">Saraiki - Arabic [skr-arab]</option>
 <option value="sl">Slovenščina [sl]</option>
 <option value="sli">Schläsch [sli]</option>
 <option value="sly">Selayar [sly]</option>
@@ -500,12 +532,14 @@
 <option value="ss">SiSwati [ss]</option>
 <option value="st">Sesotho [st]</option>
 <option value="stq">Seeltersk [stq]</option>
+<option value="sty">Siberian Tatar [sty]</option>
 <option value="su">Basa Sunda [su]</option>
 <option value="sv">Svenska [sv]</option>
 <option value="sw">Kiswahili [sw]</option>
 <option value="sxu">Saxon, Upper [sxu]</option>
 <option value="szl">Ślůnski [szl]</option>
 <option value="ta">தமிழ் [ta]</option>
+<option value="tay">Atayal [tay]</option>
 <option value="tcy">ತುಳು [tcy]</option>
 <option value="te">తెలుగు [te]</option>
 <option value="test">MediaWiki test [test]</option>
@@ -525,6 +559,7 @@
 <option value="tpi">Tok Pisin [tpi]</option>
 <option value="tr">Türkçe [tr]</option>
 <option value="tru">Ṫuroyo [tru]</option>
+<option value="trv">Seediq [trv]</option>
 <option value="ts">Xitsonga [ts]</option>
 <option value="tt">Татарча/Tatarça [tt]</option>
 <option value="tt-cyrl">Татарча [tt-cyrl]</option>
@@ -559,11 +594,13 @@
 <option value="xal">Хальмг [xal]</option>
 <option value="xh">isiXhosa [xh]</option>
 <option value="xmf">მარგალური [xmf]</option>
+<option value="xsy">Saisiyat [xsy]</option>
 <option value="yi">ייִדיש [yi]</option>
 <option value="yo">Yorùbá [yo]</option>
 <option value="yue">粵語 [yue]</option>
 <option value="za">Vahcuengh [za]</option>
 <option value="zea">Zeêuws [zea]</option>
+<option value="zgh">Moroccan Amazigh [zgh]</option>
 <option value="zh">中文 [zh]</option>
 <option value="zh-classical">文言 [zh-classical]</option>
 <option value="zh-cn">‪中文(中国大陆)‬ [zh-cn]</option>
