--- a/home/wiki/Diagnostics/Scribunto/All.html
+++ b/home/wiki/Diagnostics/Scribunto/All.html
@@ -1513,13 +1513,7 @@
       </tr>
       <tr>
         <td>
-          <span style='color: red;'>fail:<br>
-          'Sun</span>
-<pre>
-<span style='color: red;'>'<br>
-'Dim.
- '</span>
-</pre>
+          <span style='color: green;'>pass</span>
         </td>
         <td>
           inLanguage
@@ -1528,7 +1522,7 @@
           {{#invoke:Diagnostics/MessageLibrary|plain_inLanguage|fr|sun}}
         </td>
         <td>
-          Sun 
+          Dim. 
           <p>
             <br>
           </p>
