--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2019-03-24</b> 2019-03 German Wikipedia released<br/>
+  <ul>
+    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis" class="external text" rel="nofollow">German Wikipedia</a>
+    </li>
+  </ul>
+
   <b>2018-08-06</b> 2018-07 English Wikipedia released<br/>
   <ul>
     <li> <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis" class="external text" rel="nofollow">English Wikipedia</a>
@@ -121,26 +127,6 @@
     <li> <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis" class="external text" rel="nofollow">English Wikipedia</a>
     </li>
     <li> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis" class="external text" rel="nofollow">German Wikipedia</a>
-    </li>
-  </ul>
-
-  <b>2017-09-17</b> 2017-08 English Wikipedia, 2017-08 Polish wikis, 2017-08 Spanish wikis released<br/>
-  <ul>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis" class="external text" rel="nofollow">Polish wikis</a>
-    </li>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis" class="external text" rel="nofollow">Spanish wikis</a>
-    </li>
-  </ul>
-
-  <b>2017-06-21</b> 2017-06 English Wikipedia, 2017-05 German wikis, 2017-05 French wikis released<br/>
-  <ul>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis" class="external text" rel="nofollow">German wikis</a>
-    </li>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis" class="external text" rel="nofollow">French wikis</a>
     </li>
   </ul>
 
